feat: deals and review
