# src/auth/auth-provider/auth-provider.controller.ts
@@ -5,13 +5,12 @@ import { ApiBearerAuth, ApiTags } from "@nestjs/swagger";
 import { ProviderSignupDto } from "../../dtos/provider-signup.dto";
 import { AuthGuard } from "../guard/auth.guard";
 
-@ApiBearerAuth()
+
 @ApiTags('authentication-provider')
 @Controller('provider/auth')
 export class AuthProviderController {
 constructor(private readonly authProviderService: AuthProviderService) {}
 
-  @UseGuards(AuthGuard)
   @Post('signup')
   async signup(@Body() dto: ProviderSignupDto){
     return await this.authProviderService.signup(dto);
